# studies

OS/: processes.sh  test.sh
PRiR/mpi/: CMakeLists.txt  RSA.cpp  RSA.h  main.cpp  script.sh
PRiR/openmp/: CMakeLists.txt  FileReader.h  RSA.cpp  RSA.h  main.cpp
PRiR/seq/: CMakeLists.txt  FileReader.cpp  FileReader.h  RSA.cpp  RSA.h  main.cpp
PRiR/v2/seq/: .gitignore  CMakeLists.txt  Dictonary.cpp  Dictonary.h  PRIR_1.tar  PRIR_2.tar  PRIR_3.tar  PRiR_PROJEKT_2.odt  Projekt_3_MPI.odt  README.md  main.cpp
